--- a/tests/performance/BUILD.bazel
+++ b/tests/performance/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "density-kwok.go",
         "framework.go",
         "realtime.go",
+        "vmi-stress.go",
     ],
     importpath = "kubevirt.io/kubevirt/tests/performance",
     visibility = ["//visibility:public"],
@@ -16,13 +17,18 @@ go_library(
         "//staging/src/kubevirt.io/api/core/v1:go_default_library",
         "//staging/src/kubevirt.io/api/instancetype/v1beta1:go_default_library",
         "//staging/src/kubevirt.io/client-go/kubecli:go_default_library",
+        "//staging/src/kubevirt.io/client-go/log:go_default_library",
         "//tests/console:go_default_library",
         "//tests/containerdisk:go_default_library",
         "//tests/decorators:go_default_library",
+        "//tests/exec:go_default_library",
         "//tests/flags:go_default_library",
         "//tests/framework/kubevirt:go_default_library",
+        "//tests/framework/matcher:go_default_library",
         "//tests/libinstancetype/builder:go_default_library",
+        "//tests/libpod:go_default_library",
         "//tests/libvmifact:go_default_library",
+        "//tests/libvmops:go_default_library",
         "//tests/libwait:go_default_library",
         "//tests/testsuite:go_default_library",
         "//tools/perfscale-audit/api:go_default_library",
